========================
   beancount: CHANGES
========================
Note: This file contains only changes in the 'default' branch.


2016-03-13

  - Merged more changes from the 'ingest' branch which furthers the work of
    integrating the LedgerHub code into Beancount (almost done now).

    * Added mimetype() and head() methods to the file cache object passed to the
      extractors, as a convenience instead of having clients call the cached
      convert() method.

    * Added paranoid exception handlers to all the methods called on the
      importer classes.

    * Added tests for the examples provided in "examples/ingest".

    * Refactor some of the code of beancount.ingest.file.

    * Fixed bugs with ensuring the filenames are absolute names.

    * Cleaned up the output of the commands.

    * Made the header and section strings configurable from the import
      configuration.

    * Cleaned up the OFX importer from LedgerHub, added unit tests for it, and
      added it to the beancount.ingest.importers directory. In addition, added
      it to the example configuration for ingest under
      beancount/examples/ingest.

    * Added a dependency on the beautifulsoup4 package (bs4) in order to parse
      XML files.

  - Added a beancount.core.amount.add() function to add two amounts.

  - Made the directive printer be more lenient to support incomplete postings.

  - Moved the "src/clojure" and "src/golang" directories to the experiments/
    directory; they really are experiments. Should have done this a long time
    ago.


2016-03-12

  - Converted the amount.amount_*() functions to amount.*(). It's just simpler
    and nicer.

  - Made the beancount.report.balance_reports text reports rendered using the
    precision from the DisplayContext, and realization.dump_balances() require a
    formatter argument. More probaby needs to be done on issue #108 to close it,
    but that's a good start.
